<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sample.SampleFragment">

    <LinearLayout
        android:id="@+id/linear_layout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/custom_blue"
            android:padding="2dp"
            android:gravity="center|top"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_linea_value"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginTop="10sp"
                android:gravity="center|top"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="X-Axis"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/linea_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_gravity="center"
                        android:text="0.0"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Y-Axis"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/linea_y"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_gravity="center"
                        android:text="0.0"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Z-Axis"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/linea_z"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_gravity="center"
                        android:text="0.0"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/custom_blue"
            android:padding="2dp"
            android:gravity="center|top"
            android:layout_marginTop="20sp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_gyro_value"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginTop="10sp"
                android:gravity="center|top"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="X-Axis"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/gyroX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_gravity="center"
                        android:text="0.0"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Y-Axis"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/gyroY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_gravity="center"
                        android:text="0.0"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Z-Axis"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/gyroZ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_gravity="center"
                        android:text="0.0"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_of_sit_upper_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/custom_blue"
            android:gravity="center|top"
            android:layout_marginTop="20sp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_number_sit"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/number_of_sit_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/custom_blue"
                android:gravity="center|top"
                android:layout_marginTop="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/number_of_sit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5sp"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/time"
                    android:textSize="40sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_move_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/custom_blue"
            android:gravity="center|top"
            android:layout_marginTop="20sp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_appro_move"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/current_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>